# xscript

./: .gitignore  CMakeLists.txt  ConditionalOperatorSample.txt  Fails.txt  LICENSE  README.md  debugScript.xlsx  ffscript.cmake.in  firefly.sln  perforance.txt
Logger/: Logger.cpp  Logger.h  Logger.vcxproj  Logger.vcxproj.filters  ReadMe.txt  remotelogger.cpp  remotelogger.h  stdafx.h
debugger/: CMakeLists.txt
debugger/buid64/: build.bat  configure.bat
debugger/buid86/: install.bat
debugger/cinder/: CMakeLists.txt
debugger/ffdebugger/: CMakeLists.txt  FFDebuggerApp.cpp  FFDebuggerApp.h  FFDebuggerWindow.cpp  FFDebuggerWindow.h  FFDebuggerWindow_PartReadObjects.cpp
debugger/ffdebugger/dialogs/: FFCustomGui.cpp  FFCustomGui.h  FFDialog.cpp  FFDialog.h  ObjectHierarchyDlg.h  ObjectHierarchyDlg2.cpp  ObjectHierarchyDlg2.h  ObjectHierarchyDlg3.cpp  ObjectInputerDlg.cpp  ObjectInputerDlg.h  ObjectSettingsDlg.cpp  ObjectSettingsDlg.h  WindowSettingsDlg.cpp  WindowSettingsDlg.h
debugger/ffdebugger/drawobjs/: FFCompLine.cpp  FFCompLine.h  FFCompText.cpp  FFCompText.h  FFContainer.cpp  FFContainer.h  FFDrawComponent.cpp  FFDrawComponent.h  FFDrawInterfaces.h  (+10 more)
debugger/ffscript/: CMakeLists.txt
debugger/spylib/: CMakeLists.txt  FFObjectsCommands.cpp  FFObjectsCommands.h  spylib.cpp  spylib_interfaces.h
delegatesUT/: CMakeLists.txt  CachedFunctionUT.cpp  CachedMethodUT.cpp  CdeclFunctionUT.cpp  FunctionDelegate3UT.cpp  FunctionDelegatesUT.cpp  FunctionsForTest.cpp  FunctionsForTest.h  MFunctionTUT.cpp  MemberFunctionUT.cpp  MethodsForTest.cpp  MethodsForTest.h  main.cpp
doc/: CallingDestructors.docx  MainIdea.eddx  MainIdeaExpand.eddx  OperatorPrecedences.xlsx  ffscript Ideal.xmind
ffscript/: AsyncEnabledRunner.cpp  AsyncEnabledRunner.h  BasicFunction.cpp  BasicFunction.h  BasicFunctionFactory.hpp  BasicOperators.hpp  BasicType.cpp  BasicType.h  CLamdaProg.cpp  CLamdaProg.h  CMakeLists.txt  CodeUpdater.cpp  CodeUpdater.h  CommandTree.cpp  CommandTree.h  CommandUnit.cpp  CommandUnit.h  CommandUnitBuilder.cpp  CommandUnitBuilder.h  CompilerSuite.cpp  CompilerSuite.h  CompositeConstrutorUnit.cpp  CompositeConstrutorUnit.h  ConditionalOperator.cpp  ConditionalOperator.h  Context.cpp  Context.h  ContextScope.cpp  ContextScope.h  ControllerExecutor.cpp  ControllerExecutor.h  DefaultCommands.cpp  DefaultCommands.h  DefaultPreprocessor.cpp  DefaultPreprocessor.h  DestructorContextScope.cpp  DestructorContextScope.h  DynamicFunctionFactory.cpp  DynamicFunctionFactory.h  Executor.cpp  (+110 more)
ffscript/function/: CachedDelegate.cpp  CachedDelegate.h  CachedFunction.hpp  CachedMethod.hpp  CdeclFunction.hpp  CdeclFunction2.hpp  CdeclFunction3.hpp  DynamicFunction.cpp  DynamicFunction.h  DynamicFunction2.cpp  DynamicFunction2.h  FTCachedDelegateInternal.hpp  FunctionDelegate.hpp  FunctionDelegate2.hpp  FunctionDelegate3.hpp  FunctionHelper.hpp  MemberFunction.hpp  MemberFunction2.hpp  MemberFunction2Ref.hpp  MemberFunction3.hpp  MemberFunction4.hpp  MemberTypeInfo.hpp  StdFunction.hpp  StdFunction.unused.hpp  StdFunction2.unused.hpp  functioninternal.hpp  functioninternal2.hpp
ffscript/template/: TemplateBlock.hpp  TemplateTypeManager.cpp  TemplateTypeManager.h
ffscript/tree/: Tree.h
ffscriptLibrary/: CMakeLists.txt  Geometry.h  GeometryLib.cpp  GeometryLib.h  MathLib.cpp  MathLib.h  RawStringLib.cpp  RawStringLib.h  ReadMe.txt  ffscriptLibrary.vcxproj  ffscriptLibrary.vcxproj.filters  stdafx.cpp
ffscriptUT/: AssigmentCompoundUT.cpp  AsyncUT.cpp  BitwiseOperatorsUT.cpp  CMakeLists.txt  CdeclFunctionUT.cpp  CompileDynamicFunctionUT.cpp  CompileProgramInFile.cpp  CompileProgramUT.cpp  CompileProgramUT2.cpp  CompileSuiteUT.cpp  CompletedConstructorDestructorsUT.cpp  CompositeConstructorUT.cpp  ConditionalOperatorUT.cpp  ConstructorDestructorForCodeUT.cpp  ConstructorDestructorUT.cpp  DefaultOperatorsUT.cpp  Expression2PlainCodeUT.cpp  ExpressionLinkUT.cpp  ExpressionUT.cpp  FFScriptArrayUT.cpp  FunctionHelperUT.cpp  FuntionPointerUT.cpp  InternalComplierSuiteUT.cpp  LambdaExpressionUT.cpp  MakePathsUT.cpp  MemberFunctionUT.cpp  MemoryblockUT.cpp  MethodUT.cpp  MultiCompilerUT.cpp  MultiProgramUT.cpp  MultithreadUT.cpp  OperatorBracketsUT.cpp  PostFixPrefixOperatorsUT.cpp  README.md  RealLifeCases.cpp  ReusingCompilerUT.cpp  RunDynamicFunctionUT.cpp  STDFunctionUT.cpp  ScriptCompilerUT.cpp  ScriptTypeUT.cpp  (+20 more)
ffscriptUT/scripts/: AddString.c955  CreateSimpleString1.c955  ErrorInFunctionScope1.c955  ErrorInFunctionScope2.c955  ErrorInFunctionScope3.c955  ErrorInFunctionScope4.c955  ErrorInFunctionScope5.c955  ErrorInFunctionScope7.c955  ErrorInGlobalScope1.c955  ErrorInGlobalScope2.c955  ErrorInStruct1.c955  ErrorInStruct2.c955  ErrorInStruct3.c955  StringFunctions.c955
gtest/: CMakeLists.txt  README.md  conanfile.txt  gtest.cmake.in
log/: applog.txt
tutorials/: CMakeLists.txt  TutorialCommon.cpp  TutorialCommon.h
tutorials/CoActionRecursive/: CMakeLists.txt  CoActionRecursive.c955  CoActionRecursive.cpp  CoActionRecursive.vcxproj  CoActionRecursive.vcxproj.filters  ReadMe.txt
tutorials/ContructorsDestructor/: CMakeLists.txt  ContructorsDestructor.c955  ContructorsDestructor.cpp  ContructorsDestructor.vcxproj  ContructorsDestructor.vcxproj.filters  stdafx.cpp
tutorials/DataExchange/: CMakeLists.txt  DataExchange.c955  DataExchange.cpp  DataExchange.vcxproj  DataExchange.vcxproj.filters
tutorials/DynamicParameterFunction/: CMakeLists.txt  DynamicParameterFunction.c955  DynamicParameterFunction.cpp  DynamicParameterFunction.vcxproj  DynamicParameterFunction.vcxproj.filters
tutorials/HelloWorld/: CMakeLists.txt  HelloWorld.c955  HelloWorld.cpp  HelloWorld.vcxproj  HelloWorld.vcxproj.filters
tutorials/MultiThread/: CMakeLists.txt  MultiThread.c955  MultiThread.cpp  MultiThread.vcxproj  MultiThread.vcxproj.filters
tutorials/MultiThreadCpp/: CMakeLists.txt  MultiThreadCpp.c955  MultiThreadCpp.cpp  MultiThreadCpp.vcxproj  MultiThreadCpp.vcxproj.filters
tutorials/SingleExpression/: CMakeLists.txt  SingleExpression.cpp  SingleExpression.vcxproj  SingleExpression.vcxproj.filters
(+2 files in other folders)
