cmake_minimum_required (VERSION 3.2)
project(tutorials)

add_subdirectory(CoActionRecursive)
add_subdirectory(ContructorsDestructor)
add_subdirectory(DataExchange)
add_subdirectory(DynamicParameterFunction)
add_subdirectory(HelloWorld)
add_subdirectory(MultiThread)
add_subdirectory(MultiThreadCpp)
add_subdirectory(SingleExpression)

set_target_properties(CoActionRecursive PROPERTIES FOLDER tutorials)
set_target_properties(ContructorsDestructor PROPERTIES FOLDER tutorials)
set_target_properties(DataExchange PROPERTIES FOLDER tutorials)
set_target_properties(DynamicParameterFunction PROPERTIES FOLDER tutorials)
set_target_properties(HelloWorld PROPERTIES FOLDER tutorials)
set_target_properties(MultiThread PROPERTIES FOLDER tutorials)
set_target_properties(MultiThreadCpp PROPERTIES FOLDER tutorials)
set_target_properties(SingleExpression PROPERTIES FOLDER tutorials)